--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=mid_rpo
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mid_db
+spring.datasource.username=demo
+spring.datasource.password=secret
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
