DB Migration: Liquidbase added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=mid_rpo
 
-spring.datasource.url=jdbc:postgresql://localhost:2345/mid_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/mid_db
 spring.datasource.username=demo
 spring.datasource.password=secret
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
+
+spring.liquibase.change-log=db/changelog/db.changelog-master.xml
