--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mid_db
 spring.datasource.username=demo
 spring.datasource.password=secret
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
+spring.liquibase.change-log=db/changelog/db.changelog-master.xml
