--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=mid_rpo
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mid_db
+spring.datasource.url=jdbc:postgresql://localhost:2346/mid_db
 spring.datasource.username=demo
 spring.datasource.password=secret
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
-spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+#spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+
+spring.liquibase.change-log=db/changelog/db.changelog-test.xml
